objects/JSon__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceId__c</fullName>
        <label>ServiceId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>JSon</label>
    <nameField>
        <label>JSon</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JSons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>